fix: 통과하지 않는 테스트 수정